force-app/main/default/objects/Individual/fields/GlobalMigrationKey__c.field-meta.xml
<CustomField>
    <fullName>GlobalMigrationKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Chiave Globale Migrazione</description>
    <externalId>true</externalId>
    <label>Chiave Globale Migrazione</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>