force-app/main/default/objects/Individual/fields/HasOptedOutSoftSpam__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutSoftSpam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Diniego Soft-Spam/Legittimo interesse</description>
    <label>Diniego Soft-Spam/Legittimo interesse</label>
    <type>Checkbox</type>
</CustomField>