force-app/main/default/objects/Individual/fields/MarketingPrivacyVersion__c.field-meta.xml
<CustomField>
    <fullName>MarketingPrivacyVersion__c</fullName>
    <label>Versione informativa marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>