force-app/main/default/objects/Individual/fields/OneshotBlacklist__c.field-meta.xml
<CustomField>
    <fullName>OneshotBlacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se True, nessuna comunicazione Oneshot può essere inviata al Contatto.</description>
    <label>Blacklist Oneshot</label>
    <type>Checkbox</type>
</CustomField>