force-app/main/default/objects/Individual/fields/OneshotBlacklistRemovalReason__c.field-meta.xml
<CustomField>
    <fullName>OneshotBlacklistRemovalReason__c</fullName>
    <description>Se True, nessuna comunicazione Oneshot può essere inviata al Contatto.</description>
    <label>Motivazione Rimozione Blacklist Oneshot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To define</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>