force-app/main/default/objects/Individual/fields/PrivacyMarketingChoiceDate__c.field-meta.xml
<CustomField>
    <fullName>PrivacyMarketingChoiceDate__c</fullName>
    <description>Viene valorizzato ogni qual volta che il cliente cambia la scelta privacy relativa</description>
    <label>Data diniego marketing</label>
    <type>Date</type>
</CustomField>