force-app/main/default/objects/Individual/fields/PrivacyMarketingChoiceSource__c.field-meta.xml
<CustomField>
    <fullName>PrivacyMarketingChoiceSource__c</fullName>
    <description>Fonte diniego marketing</description>
    <label>Fonte Consenso Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ChoiseSource</valueSetName>
    </valueSet>
</CustomField>