force-app/main/default/objects/Individual/fields/PrivacyMarketingConsentInitiative__c.field-meta.xml
<CustomField>
    <fullName>PrivacyMarketingConsentInitiative__c</fullName>
    <label>Iniziativa consenso marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ConsentInitiative</valueSetName>
    </valueSet>
</CustomField>