force-app/main/default/objects/Individual/fields/PrivacyProfilingChoiceDate__c.field-meta.xml
<CustomField>
    <fullName>PrivacyProfilingChoiceDate__c</fullName>
    <description>Viene valorizzato ogni qual volta che il cliente cambia la scelta privacy relativa</description>
    <label>Data Consenso Profilazione</label>
    <type>Date</type>
</CustomField>