force-app/main/default/objects/Individual/fields/PrivacyProfilingChoiceSource__c.field-meta.xml
<CustomField>
    <fullName>PrivacyProfilingChoiceSource__c</fullName>
    <description>Fonte diniego profilazione</description>
    <label>Fonte Consenso Profilazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ChoiseSource</valueSetName>
    </valueSet>
</CustomField>