force-app/main/default/objects/Individual/fields/PrivacyProfilingConsentInitiative__c.field-meta.xml
<CustomField>
    <fullName>PrivacyProfilingConsentInitiative__c</fullName>
    <label>Iniziativa consenso Profilazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ConsentInitiative</valueSetName>
    </valueSet>
</CustomField>