force-app/main/default/objects/Individual/fields/PrivacySoftSpamChoiceDate__c.field-meta.xml
<CustomField>
    <fullName>PrivacySoftSpamChoiceDate__c</fullName>
    <description>Viene valorizzato ogni qual volta che il cliente cambia idea sul ricevere SoftSpam</description>
    <label>Data diniego SoftSpam</label>
    <type>Date</type>
</CustomField>