force-app/main/default/objects/Individual/fields/PrivacySoftSpamChoiceSource__c.field-meta.xml
<CustomField>
    <fullName>PrivacySoftSpamChoiceSource__c</fullName>
    <label>Fonte diniego SoftSpam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ChoiseSource</valueSetName>
    </valueSet>
</CustomField>