force-app/main/default/objects/Individual/fields/PrivacyThirdPartyChoiceSource__c.field-meta.xml
<CustomField>
    <fullName>PrivacyThirdPartyChoiceSource__c</fullName>
    <label>Fonte consenso dati a terzi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ChoiseSource</valueSetName>
    </valueSet>
</CustomField>