force-app/main/default/objects/Individual/fields/PrivacyThirdPartyConsentInitiative__c.field-meta.xml
<CustomField>
    <fullName>PrivacyThirdPartyConsentInitiative__c</fullName>
    <label>Iniziativa consenso dati a terzi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ConsentInitiative</valueSetName>
    </valueSet>
</CustomField>