force-app/main/default/objects/Individual/fields/ProfilingCompanyConsent__c.field-meta.xml
<CustomField>
    <fullName>ProfilingCompanyConsent__c</fullName>
    <label>Company consenso Profilazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Company</valueSetName>
    </valueSet>
</CustomField>