force-app/main/default/objects/Individual/fields/ProfilingPrivacy__c.field-meta.xml
<CustomField>
    <fullName>ProfilingPrivacy__c</fullName>
    <description>Indica la scelta del cliente riguardo la profilazione dei suoi dati personali</description>
    <label>Consenso Alla Profilazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Non espresso</fullName>
                <default>true</default>
                <label>Non espresso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>