force-app/main/default/objects/Individual/fields/ProfilingPrivacyVersion__c.field-meta.xml
<CustomField>
    <fullName>ProfilingPrivacyVersion__c</fullName>
    <description>Versione informativa profilazione</description>
    <label>Versione informativa profilazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>