force-app/main/default/objects/Individual/fields/ThirdPartyCompanyConsent__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyCompanyConsent__c</fullName>
    <label>Company consenso dati a terzi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Company</valueSetName>
    </valueSet>
</CustomField>