force-app/main/default/objects/Individual/fields/ThirdPartyPrivacy__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyPrivacy__c</fullName>
    <description>Indica la scelta del cliente riguardo il trasferimento dei suoi dati a terzi</description>
    <label>Consenso Trasferimento Dati a Terzi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Non espresso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>