force-app/main/default/objects/Individual/fields/ThirdPartyPrivacyVersion__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyPrivacyVersion__c</fullName>
    <label>Versione informativa consenso dati terzi</label>
    <length>12</length>
    <type>Text</type>
</CustomField>