force-app/main/default/objects/Individual/validationRules/HDT_VR_CheckRemovalReason.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_CheckRemovalReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(OneshotBlacklistRemovalReason__c)), NOT(ISBLANK(TEXT(PRIORVALUE(OneshotBlacklistRemovalReason__c)))))</errorConditionFormula>
    <errorDisplayField>OneshotBlacklistRemovalReason__c</errorDisplayField>
    <errorMessage>Il campo “Motivazione Rimozione Blacklist” non può essere rimosso una volta valorizzato.</errorMessage>
</ValidationRule>