force-app/main/default/objects/Individual/validationRules/HDT_VR_DisableBlacklistOneshot.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_DisableBlacklistOneshot</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(OneshotBlacklistRemovalReason__c)), PRIORVALUE(OneshotBlacklist__c) = True &amp;&amp; OneshotBlacklist__c = False)</errorConditionFormula>
    <errorDisplayField>OneshotBlacklistRemovalReason__c</errorDisplayField>
    <errorMessage>Il campo “Motivazione Rimozione Blacklist” è obbligatorio se si vuole rimuove il flag della Blacklist Oneshot.</errorMessage>
</ValidationRule>